<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Servicio Tecnico</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnLogin">Loguearse</string>
    <string name="lblUsuario">Usuario</string>
    <string name="lblContrasena">Contraseña</string>
    <string name="ckbGuardarContrasena">Guardar Contraseña</string>
    <string name="btnRegistrar">Registrar URL</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="btnSoporte">Soporte Tecnico</string>
    <string name="btnComputadoras">Computadoras</string>
    <string name="btnEstadisticas">Estadisticas</string>
    <string name="title_activity_abm_soporte">AbmSoporteActivity</string>
    <string name="btnListarSoporte">Ver Todos</string>
    <string name="btnCrearSoporte">Ingresar Nuevo Soporte</string>
    <string name="title_activity_soporte">SoporteActivity</string>
    <string name="lblSoporte">SOPORTE</string>
    <string name="title_activity_registrar">RegistrarActivity</string>
    <string name="lblUrlServidor">Url Servidor</string>
    <string name="title_activity_computadora">ComputadoraActivity</string>
    <string name="title_activity_abm_computadora">AbmComputadoraActivity</string>
    <string name="title_activity_lista_soporte">ListaSoporteActivity</string>
    <string name="lblIDPCSoporte">ID Computadora</string>
    <string name="lblObservacionesSoporte">Observaciones</string>
    <string name="lblFechaSoporte">Fecha</string>
    <string name="lblTecnicoSoporte">Tecnico</string>
    <string name="lblEstadoSoporte">Estado:</string>
    <string name="title_activity_lista_computadora">ListaComputadoraActivity</string>
    <string name="title_activity_buscar_sector">BuscarSectorActivity</string>
    <string name="title_activity_modificar_sector">ModificarSectorActivity</string>
    <string name="title_activity_sector">SectorActivity</string>

</resources>
