<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSoporte"
        android:id="@+id/btnSoporte"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="86dp"
        android:clickable="true"
        android:onClick="onClickBtnSoporte"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnComputadoras"
        android:id="@+id/btnComputadoras"
        android:layout_below="@+id/btnSoporte"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:clickable="true"
        android:onClick="onClickBtnComputadora"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEstadisticas"
        android:id="@+id/btnEstadisticas"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:onClick="onClickBtnEstadisticas"
        android:enabled="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BUSCAR SECTOR"
        android:id="@+id/btnMainSector"
        android:layout_below="@+id/btnEstadisticas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:onClick="onClickBtnComputadora"/>
</RelativeLayout>
